--- a/index.html
+++ b/index.html
@@ -5,34 +5,53 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chat Room</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
+  <link rel="stylesheet" type="text/css" href="assets/css/formstyle.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 
 <body>
 
-  <div class="chatbox">
-    <div class="chatlogs">
+  <header class="header">
+    <img class="header__logo" src="http://via.placeholder.com/100x50" alt="Site Logo">
+    <nav class="nav">
+      <ul class="nav__wrapper">
+        <li class="nav__item"><a href="#" class="nav__link active">Home</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Item2</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Item3</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Item4</a></li>
+      </ul>
+    </nav>
+  </header>
 
-      <div class="chat friend">
-        <div class="chat"></div>
-        <div class="addspace"></div>
-		
-        <p class="chat-message"><strong>12:40 - Michael</strong> <br> hi</p>
+
+  <form>
+    <div class="chatbox">
+
+      <div class="chatlogs">
+
+        <div class="chat friend">
+          <p class="chat-message">12:40 [Michael] <br> hi</p>
+        </div>
+
+        <div class="chat self">
+          <p class="chat-message">12:48 [Me] <br> byefhyfhthgfhgfhgfghfgghfffftyrytrytrytrytrytrytrytrytrytrytry</p>
+        </div>
+
       </div>
-      <div class="chat self">
-        <div class="addspace"></div>
-        <p class="chat-message"><strong>12:48 - Me</strong> <br>hello</p>
+
+
+      <div class="chat-form">
+        <textarea id="mytxt" placeholder="Type here.."></textarea>
+        <button id="sendbtn">SEND</button>
       </div>
 
     </div>
+  </form>
 
-
-    <div class="chat-form">
-      <textarea id="mytxt"></textarea>
-      <button id="sendbtn">Send</button>
-    </div>
-  </div>
+  <footer class="footer">
+  </footer>
 
 </body>
 
