Some more updates at the footer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <header class="header">
-    <img class="header__logo" src="http://via.placeholder.com/100x50" alt="Site Logo">
+    <img class="header__logo" src="assets/images/headerlogo.png" alt="Logo">
     <nav class="nav">
       <ul class="nav__wrapper">
         <li class="nav__item"><a href="#" class="nav__link active">Home</a></li>
@@ -55,8 +55,17 @@
 
 
 
+
   <footer class="footer">
-    Hello world whatsuppffff
+    <img class="footer__logo" src="assets/images/footerlogo.png" alt="Logo">
+    Made by Bărbulescu Adrian
+    <div class="details">
+      <ul class="footer__nav">
+      <li class="footer__nav__item"><img class="miniimg" src="assets/images/cv-logo.png" alt="CV Logo"><a class="footer__links" href="http://webspace.ulbsibiu.ro/adrian.barbulescu/">Bărbulescu Adrian</a></li>
+      <li class="footer__nav__item"><img class="miniimg" src="assets/images/github-logo.png" alt="Github Logo"><a class="footer__links" href="https://github.com/ST4NSB">ST4NSB</a></li>
+      <li class="footer__nav__item"><img class="miniimg" src="assets/images/csac-logo.png" alt="CSAC Logo"><a class="footer__links" href="http://csac.ulbsibiu.ro/">Comp Sci & Electric Eng Department</a></li>
+      </ul>
+    </div>
   </footer>
 
 </body>
