--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
 
 
 
-
   <footer class="footer">
     <img class="footer__logo" src="assets/images/footerlogo.png" alt="Logo">
-    Made by Bărbulescu Adrian
+    Bărbulescu Adrian &reg; All rights reserved 2018
     <div class="details">
       <ul class="footer__nav">
-      <li class="footer__nav__item"><img class="miniimg" src="assets/images/cv-logo.png" alt="CV Logo"><a class="footer__links" href="http://webspace.ulbsibiu.ro/adrian.barbulescu/">Bărbulescu Adrian</a></li>
-      <li class="footer__nav__item"><img class="miniimg" src="assets/images/github-logo.png" alt="Github Logo"><a class="footer__links" href="https://github.com/ST4NSB">ST4NSB</a></li>
-      <li class="footer__nav__item"><img class="miniimg" src="assets/images/csac-logo.png" alt="CSAC Logo"><a class="footer__links" href="http://csac.ulbsibiu.ro/">Comp Sci & Electric Eng Department</a></li>
+      <li class="footer__nav__item"><a class="footer__links" href="http://webspace.ulbsibiu.ro/adrian.barbulescu/"><img class="miniimg" src="assets/images/cv-logo.png" alt="CV Logo"></a></li>
+      <li class="footer__nav__item"><a class="footer__links" href="https://github.com/ST4NSB"><img class="miniimg" src="assets/images/github-logo.png" alt="Github Logo"></a></li>
+      <li class="footer__nav__item"><a class="footer__links" href="http://csac.ulbsibiu.ro/"><img class="miniimg" src="assets/images/csac-logo.png" alt="CSAC Logo"></a></li>
       </ul>
     </div>
   </footer>
