--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           </div>
 
           <div class="chat self">
-            <p class="chat-message">12:48 [Me] <br> byefhyfhthgfhgfhgfghfgghfffftyrytrytrytrytrytrytrytrytrytrytry</p>
+            <p class="chat-message">12:48 [Me] <br> hi</p>
           </div>
 
         </div>
