some more visual updates

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <li class="nav__item"><a href="#" class="nav__link">Item2</a></li>
         <li class="nav__item"><a href="#" class="nav__link">Item3</a></li>
         <li class="nav__item"><a href="#" class="nav__link">Item4</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Register</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">Login</a></li>
       </ul>
     </nav>
   </header>
@@ -45,8 +47,8 @@
 
 
         <div class="chat-form">
-          <textarea id="mytxt" placeholder="Type here.."></textarea>
-          <button id="sendbtn">SEND</button>
+          <textarea disabled id="mytxt" placeholder="Login to access the chat"></textarea>
+          <button disabled id="sendbtn">SEND</button>
         </div>
 
       </div>
