added Error login div

--- a/login.html
+++ b/login.html
@@ -51,6 +51,7 @@
               <span>Keep me logged in</span>
             </label>
           </div>
+          <div class="login__failmessage"></div>
           <div class="login__button">
             <button type="submit">Login</button>
           </div>
