--- a/login.html
+++ b/login.html
@@ -38,6 +38,7 @@
 
           <div class="login__username">
             <h1>LOG IN</h1>
+            <div class="login__failmessage">gg</div>
             <label for="username">Username</label>
             <input name="username" type="text"></input>
           </div>
@@ -51,7 +52,6 @@
               <span>Keep me logged in</span>
             </label>
           </div>
-          <div class="login__failmessage"></div>
           <div class="login__button">
             <button type="submit">Login</button>
           </div>
