added register on login

--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
 
           <div class="login__username">
             <h1>LOG IN</h1>
-            <div class="login__failmessage">gg</div>
+            <div class="login__failmessage"></div>
             <label for="username">Username</label>
             <input name="username" type="text"></input>
           </div>
@@ -51,6 +51,9 @@
               <input name="loggedin" type="checkbox"></input>
               <span>Keep me logged in</span>
             </label>
+          </div>
+          <div class="login__registermsg">
+            Don't have an account? <a class="login__link" href="register.html">REGISTER</a>
           </div>
           <div class="login__button">
             <button type="submit">Login</button>
