--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <nav class="nav">
       <ul class="nav__wrapper">
         <li class="nav__item"><a href="index.html" class="nav__link active">Home</a></li>
-        <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+        <li class="nav__item"><a href="about.html" class="nav__link">About</a></li>
 
-        <li class="nav__item"><a href="#" class="nav__link">Register</a></li>
+        <li class="nav__item"><a href="register.html" class="nav__link">Register</a></li>
         <li class="nav__item"><a href="login.html" class="nav__link">Login</a></li>
       </ul>
     </nav>
