--- a/register.html
+++ b/register.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login - Online Chat</title>
+  <title>Register - Online Chat</title>
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   <link rel="stylesheet" type="text/css" href="assets/css/navbar.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/loginstyle.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/registerstyle.css">
   <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
 </head>
 
@@ -21,52 +21,36 @@
         <li class="nav__item"><a href="index.html" class="nav__link ">Home</a></li>
         <li class="nav__item"><a href="about.html" class="nav__link">About</a></li>
 
-        <li class="nav__item"><a href="register.html" class="nav__link">Register</a></li>
-        <li class="nav__item"><a href="login.html" class="nav__link active">Login</a></li>
+        <li class="nav__item"><a href="register.html" class="nav__link active">Register</a></li>
+        <li class="nav__item"><a href="login.html" class="nav__link">Login</a></li>
       </ul>
     </nav>
   </header>
 
 
+  <main class="main__register">
+    <form class="form__register">
+      <div class="register__window">
 
-  <main class="main__login">
-    <form class="form__login">
-      <div class="login__window">
+        <div class="register__topside"></div>
+        <div class="register__content">
 
-        <div class="login__topside"></div>
-        <div class="login__content">
-
-          <h1>LOG IN</h1>
-          <div class="login__failmessage"></div>
-          <div class="login__username">
-            <label for="username">Username</label>
-            <input name="username" type="text"></input>
+          <h1>REGISTER</h1>
+          <div class="register__failmessage"></div>
+          <div class="register__inputs">
+            <input placeholder="Create a username.." name="username" type="text"></input>
+            <input placeholder="Type your e-mail address.." name="email" type="email"></input>
+            <input name="password" type="password" placeholder="Create a password.."></input>
+            <input name="passwordconf" type="password" placeholder="Confirm password.."></input>
           </div>
-          <div class="login__password">
-            <label for="password">Password</label>
-            <input name="password" type="password"></input>
-          </div>
-          <div class="login__checkbox">
-            <label class="login__checkbox__label" for="loggedin">
-              <input name="loggedin" type="checkbox"></input>
-              <span>Keep me logged in</span>
-            </label>
-          </div>
-          <div class="login__registermsg">
-            Don't have an account? <a class="login__link" href="register.html">REGISTER</a>
-          </div>
-          <div class="login__button">
-            <button type="submit">Login</button>
+          <div class="register__button">
+            <button type="submit">Sign up</button>
           </div>
         </div>
 
       </div>
     </form>
   </main>
-
-
-
-
 
 
   <footer class="footer">
@@ -81,6 +65,5 @@
     </div>
   </footer>
 
-</body>
 
-</html>
+</body>
