more about. updates

--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
   <main class="about__main">
     <div class="about__border">
       <div class="about__mainwindow">
+        <h1>About this site..</h1>
         <div class="about__text">
           heelo
         </div>
