--- a/login.html
+++ b/login.html
@@ -40,15 +40,15 @@
           <div class="login__failmessage"></div>
           <div class="login__username">
             <label for="username">Username</label>
-            <input name="username" type="text"></input>
+            <input id="username" type="text">
           </div>
           <div class="login__password">
             <label for="password">Password</label>
-            <input name="password" type="password"></input>
+            <input id="password" type="password">
           </div>
           <div class="login__checkbox">
-            <label class="login__checkbox__label" for="loggedin">
-              <input name="loggedin" type="checkbox"></input>
+            <label class="login__checkbox__label" for="checkbox">
+              <input id="checkbox" type="checkbox">
               <span>Keep me logged in</span>
             </label>
           </div>
