--- a/register.html
+++ b/register.html
@@ -38,10 +38,10 @@
           <h1>REGISTER</h1>
           <div class="register__failmessage"></div>
           <div class="register__inputs">
-            <input placeholder="Create a username.." name="username" type="text"></input>
-            <input placeholder="Type your e-mail address.." name="email" type="email"></input>
-            <input name="password" type="password" placeholder="Create a password.."></input>
-            <input name="passwordconf" type="password" placeholder="Confirm password.."></input>
+            <input placeholder="Create a username.." name="username" type="text">
+            <input placeholder="Type your e-mail address.." name="email" type="email">
+            <input name="password" type="password" placeholder="Create a password..">
+            <input name="passwordconf" type="password" placeholder="Confirm password..">
           </div>
           <div class="register__button">
             <button type="submit">Sign up</button>
