update on about page

--- a/about.html
+++ b/about.html
@@ -30,10 +30,16 @@
   <main class="about__main">
     <div class="about__border">
       <div class="about__mainwindow">
-        <h1>About this site..</h1>
-        <div class="about__text">
-          heelo
-        </div>
+        <h1>About this site</h1>
+        <ul class="about__text">
+          <li>Real time online chat using database and php!</li>
+          <li>Made for an university course project!</li>
+          <li>Author: <span>Bărbulescu Adrian</span> (personal links in the footer)</li>
+        </ul>
+          <h1>Chat Commands</h1>
+        <ul class="about__text">
+          <li>/ban id reason</li>
+        </ul>
       </div>
     </div>
   </main>
