--- a/about.html
+++ b/about.html
@@ -30,13 +30,13 @@
   <main class="about__main">
     <div class="about__border">
       <div class="about__mainwindow">
-        <h1>About this site</h1>
+        <h1>Online Chat - About</h1>
         <ul class="about__text">
           <li>Real time online chat using database and php!</li>
           <li>Made for an university course project!</li>
           <li>Author: <span>Bărbulescu Adrian</span> (personal links in the footer)</li>
         </ul>
-          <h1>Chat Commands</h1>
+        <h2>Chat Commands</h2>
         <ul class="about__text">
           <li>/ban id reason</li>
         </ul>
