--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 
   <footer class="footer">
     <img class="footer__logo" src="assets/images/footerlogo.png" alt="Logo">
-    Bărbulescu Adrian &reg; All rights reserved 2018
+    <div class="credits">
+      Bărbulescu Adrian &reg; All rights reserved 2018
+    </div>
     <div class="details">
       <ul class="footer__nav">
       <li class="footer__nav__item"><a class="footer__links" href="http://webspace.ulbsibiu.ro/adrian.barbulescu/"><img class="miniimg" src="assets/images/cv-logo.png" alt="CV Logo"></a></li>
