--- a/about.html
+++ b/about.html
@@ -44,16 +44,19 @@
     </div>
   </main>
 
-  <footer class="footer">
-    <img class="footer__logo" src="assets/images/footerlogo.png" alt="Logo">
-    Bărbulescu Adrian &reg; All rights reserved 2018
-    <div class="details">
-      <ul class="footer__nav">
-      <li class="footer__nav__item"><a class="footer__links" href="http://webspace.ulbsibiu.ro/adrian.barbulescu/"><img class="miniimg" src="assets/images/cv-logo.png" alt="CV Logo"></a></li>
-      <li class="footer__nav__item"><a class="footer__links" href="https://github.com/ST4NSB"><img class="miniimg" src="assets/images/github-logo.png" alt="Github Logo"></a></li>
-      <li class="footer__nav__item"><a class="footer__links" href="http://csac.ulbsibiu.ro/"><img class="miniimg" src="assets/images/csac-logo.png" alt="CSAC Logo"></a></li>
-      </ul>
-    </div>
-  </footer>
+
+    <footer class="footer">
+      <img class="footer__logo" src="assets/images/footerlogo.png" alt="Logo">
+      <div class="credits">
+        Bărbulescu Adrian &reg; All rights reserved 2018
+      </div>
+      <div class="details">
+        <ul class="footer__nav">
+        <li class="footer__nav__item"><a class="footer__links" href="http://webspace.ulbsibiu.ro/adrian.barbulescu/"><img class="miniimg" src="assets/images/cv-logo.png" alt="CV Logo"></a></li>
+        <li class="footer__nav__item"><a class="footer__links" href="https://github.com/ST4NSB"><img class="miniimg" src="assets/images/github-logo.png" alt="Github Logo"></a></li>
+        <li class="footer__nav__item"><a class="footer__links" href="http://csac.ulbsibiu.ro/"><img class="miniimg" src="assets/images/csac-logo.png" alt="CSAC Logo"></a></li>
+        </ul>
+      </div>
+    </footer>
 
 </body>
