--- a/index.html
+++ b/index.html
@@ -42,6 +42,23 @@
             <p class="chat-message">12:48 [Me] <br> hi</p>
           </div>
 
+          <div class="chat self">
+            <p class="chat-message">12:48 [Me] <br> hi</p>
+          </div>
+
+          <div class="chat self">
+            <p class="chat-message">12:48 [Me] <br> hi</p>
+          </div>
+
+          <div class="chat self">
+            <p class="chat-message">12:48 [Me] <br> hi</p>
+          </div>
+          <div class="chat self">
+            <p class="chat-message">12:48 [Me] <br> hi</p>
+          </div><div class="chat self">
+            <p class="chat-message">12:48 [Me] <br> hi</p>
+          </div>
+
         </div>
 
 
