some more responsive updates

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </ul>
         <h2>Chat Commands</h2>
         <ul class="about__text">
-          <li>/ban id reason</li>
+          <li>TBA</li>
         </ul>
       </div>
     </div>
