major updates, changed files to php and some scripts

--- a/oldhtml/index.html
+++ b/oldhtml/index.html
@@ -14,6 +14,10 @@
 
 <body>
 
+  <?php
+
+  ?>
+  <!--
   <header class="header">
     <img class="header__logo" src="assets/images/headerlogo.png" alt="Logo">
     <nav class="nav">
@@ -26,6 +30,7 @@
       </ul>
     </nav>
   </header>
+-->
 
 
   <main class="main__content">
