--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+<html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
 </head>
@@ -17,3 +18,4 @@
     </div>
   </footer>
 </body>
+</html>
