some minor updates

--- a/footer.html
+++ b/footer.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
+  <title>footer</title>
   <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
 </head>
 
 <body>
+
   <footer class="footer">
     <img class="footer__logo" src="assets/images/footerlogo.png" alt="Logo">
     <div class="credits">
@@ -17,5 +21,6 @@
       </ul>
     </div>
   </footer>
+
 </body>
 </html>
