--- a/adduser.html
+++ b/adduser.html
@@ -18,7 +18,7 @@
       <input placeholder="Username" name="cu_username" type="text" maxlength="30" required>
       <input placeholder="e-mail" name="cu_email" type="email" maxlength="30" required>
       <label for="cu_rank">Rank: </label>
-      <select name="cu_rank">
+      <select name="cu_rank" id="cu_rank">
         <option value="1">User</option>
         <option value="2">Admin</option>
       </select>
