--- a/footer.html
+++ b/footer.html
@@ -15,9 +15,9 @@
     </div>
     <div class="details">
       <ul class="footer__nav">
-      <li class="footer__nav__item"><a class="footer__links" href="http://webspace.ulbsibiu.ro/adrian.barbulescu/"><img class="miniimg" src="assets/images/cv-logo.png" alt="CV Logo"></a></li>
+      <li class="footer__nav__item"><a class="footer__links" href="#"><img class="miniimg" src="assets/images/cv-logo.png" alt="CV Logo"></a></li>
       <li class="footer__nav__item"><a class="footer__links" href="https://github.com/ST4NSB"><img class="miniimg" src="assets/images/github-logo.png" alt="Github Logo"></a></li>
-      <li class="footer__nav__item"><a class="footer__links" href="http://csac.ulbsibiu.ro/"><img class="miniimg" src="assets/images/csac-logo.png" alt="CSAC Logo"></a></li>
+      <li class="footer__nav__item"><a class="footer__links" href="#"><img class="miniimg" src="assets/images/csac-logo.png" alt="CSAC Logo"></a></li>
       </ul>
     </div>
   </footer>
