--- a/footer.html
+++ b/footer.html
@@ -11,7 +11,7 @@
   <footer class="footer">
     <img class="footer__logo" src="assets/images/footerlogo.png" alt="Logo">
     <div class="credits">
-      Bărbulescu Adrian &reg; All rights reserved 2018
+      ST4NSB &reg; All rights reserved 2018
     </div>
     <div class="details">
       <ul class="footer__nav">
